--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-electron-web-view": "^2.0.1",
     "react-scripts": "3.1.1"
   },
   "main": "public/electron.js",
@@ -35,7 +36,7 @@
     ]
   },
   "devDependencies": {
-    "@rescripts/cli": "^0.0.11",
+    "@rescripts/cli": "0.0.11",
     "@rescripts/rescript-env": "^0.0.10",
     "concurrently": "^4.1.2",
     "electron": "^6.0.7",
