--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
+    "materialize-css": "^1.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-electron-web-view": "^2.0.1",
-    "react-scripts": "3.1.1"
+    "react-materialize": "^3.3.5",
+    "react-redux": "^7.1.1",
+    "react-scripts": "3.1.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "main": "public/electron.js",
   "scripts": {
