VERY basic version works

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
+    "electron-context-menu": "^0.15.0",
     "materialize-css": "^1.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
