--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,27 @@
-{ 
+{
   "compilerOptions": {
-    "target": "es5",
+    "outDir": "./dist/",
+
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+
     "module": "commonjs",
-    "moduleResolution": "node",
+    "target": "es6",
+    "jsx": "react",
+    "allowJs": true,
     "sourceMap": true,
-    "emitDecoratorMetadata": true,
+    "moduleResolution": "node",
+    "lib": ["dom", "esnext"],
     "experimentalDecorators": true,
-    "removeComments": false,
-    "noImplicitAny": false,
-    "suppressImplicitAnyIndexErrors": true 
+
+    "baseUrl": "./",
+
+    "paths": {
+      "~/*": ["./src/*"]
+    }
   },
-  "exclude": [ "node_modules" ] 
+  "exclude": [ "node_modules" ],
+  "include": ["./src/**/*.ts", "./src/**/*.tsx"]
 }
