Browser is resolving raw data and website data

--- a/package.json
+++ b/package.json
@@ -27,20 +27,21 @@
     "url": "https://github.com/schlende/focusbrowser/issues"
   },
   "homepage": "https://github.com/schlende/focusbrowser#readme",
-  "dependencies": {
-    "@types/styled-components": "^4.1.19",
+  "dependencies": {},
+  "devDependencies": {
+    "@types/node": "^12.7.8",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
+    "cross-env": "^6.0.3",
+    "electron": "^6.0.9",
+    "ipfs": "^0.38.0",
     "mobx": "^5.13.0",
     "mobx-react-lite": "^1.4.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "styled-components": "^4.3.2",
-    "typescript": "^3.6.3"
-  },
-  "devDependencies": {
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
-    "cross-env": "^6.0.3",
-    "electron": "^6.0.9",
+    "typescript": "^3.6.3",
+    "@types/styled-components": "^4.1.19",
     "electron-builder": "^21.2.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
