--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "focusbrowser",
+  "appId": "com.wildnotion.focusbrowser",
   "version": "1.0.0",
   "description": "A browser designed to help people stay focused",
-  "main": "index.ts",
+  "main": "build/bundle-electron.js",
   "scripts": {
     "dev": "ENV='dev' webpack-dev-server --config webpack.config.browserui.js",
     "build": "npx webpack --config webpack.config.electron.js; npx webpack --config webpack.config.browserui.js",
-    "start": "electron dist/bundle-electron.js",
+    "compile-darwin": "npm run build && electron-builder -m -p always",
+    "start": "cross-env ENV='dev' electron .",
     "prestart": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -27,7 +29,6 @@
   "homepage": "https://github.com/schlende/focusbrowser#readme",
   "dependencies": {
     "@types/styled-components": "^4.1.19",
-    "electron": "^6.0.9",
     "mobx": "^5.13.0",
     "mobx-react-lite": "^1.4.1",
     "react": "^16.9.0",
@@ -38,6 +39,9 @@
   "devDependencies": {
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "cross-env": "^6.0.3",
+    "electron": "^6.0.9",
+    "electron-builder": "^21.2.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "react-hot-loader": "^4.12.13",
