--- a/package.json
+++ b/package.json
@@ -27,27 +27,30 @@
     "url": "https://github.com/schlende/focusbrowser/issues"
   },
   "homepage": "https://github.com/schlende/focusbrowser#readme",
-  "dependencies": {},
+  "dependencies": {
+    "@pinata/sdk": "^1.1.1"
+  },
   "devDependencies": {
     "@types/node": "^12.7.8",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "@types/styled-components": "^4.1.19",
     "cross-env": "^6.0.3",
     "electron": "^6.0.9",
+    "electron-builder": "^21.2.0",
+    "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
     "ipfs": "^0.38.0",
+    "ipfs-http-client": "^38.0.0",
     "mobx": "^5.13.0",
     "mobx-react-lite": "^1.4.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "styled-components": "^4.3.2",
-    "typescript": "^3.6.3",
-    "@types/styled-components": "^4.1.19",
-    "electron-builder": "^21.2.0",
-    "file-loader": "^4.2.0",
-    "html-webpack-plugin": "^3.2.0",
     "react-hot-loader": "^4.12.13",
     "source-map-loader": "^0.2.4",
+    "styled-components": "^4.3.2",
     "ts-loader": "^6.1.0",
+    "typescript": "^3.6.3",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.1"
