--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "@types/styled-components": "^4.1.19",
+    "axios": "^0.19.0",
     "cross-env": "^6.0.3",
     "electron": "^6.0.9",
     "electron-builder": "^21.2.0",
