Update license type in package.json

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "addiction"
   ],
   "author": "Walt Schlender",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/schlende/focusbrowser/issues"
   },
