--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cross-env": "^6.0.3",
     "electron": "^6.0.9",
     "electron-builder": "^21.2.0",
+    "electron-log": "^3.0.8",
     "electron-updater": "4.1.2",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
