--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "focusbrowser",
   "appId": "com.wildnotion.focusbrowser",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A browser designed to help people stay focused",
   "main": "build/bundle-electron.js",
   "scripts": {
@@ -9,6 +9,7 @@
     "build": "npx webpack --config webpack.config.electron.js && npx webpack --config webpack.config.browserui.js",
     "compile-darwin": "npm run build && electron-builder -m -p always",
     "compile-win": "npm run build && electron-builder -w -p always",
+    "compile-mac-win": "npm run build && electron-builder -wm -p always",
     "start": "cross-env ENV='dev' electron .",
     "prestart": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
