--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "moduleResolution": "node",
     "lib": ["dom", "esnext"],
     "experimentalDecorators": true,
+    "resolveJsonModule": true,
 
     "baseUrl": "./",
 
